--- a/Health/contact.html
+++ b/Health/contact.html
@@ -25,7 +25,7 @@
 				<div class="dropdown-content">
 					<a href="exercice.html">Exercice</a>
 					<a href="food.html">Food</a>
-					<a href="Sleep.html">Sleep</a>
+					<a href="sleep.html">Sleep</a>
 				</div>
 			</li>
 			<li><a href="contact.html">Contact</a></li>
