--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>Healty Tips Home</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<!--Font
 	-------------------------------------------------->
