--- a/Health/food.html
+++ b/Health/food.html
@@ -34,7 +34,7 @@
 		<div class="logo">
 			
 			<a href="home.html" title="Logo"><div class="logo_center">
-			Healthy <br/>bob
+			Healthy <br/>tips
 			</div></a>
 		</div>
 	</header>
