--- a/food.html
+++ b/food.html
@@ -35,7 +35,7 @@
 		<div class="logo">
 			
 			<a href="home.html" title="Logo"><div class="logo_center">
-			Healthy <br/>Tips
+			Healthy <br/>Bob
 			</div></a>
 		</div>
 	</header>
