--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 		<div class="logo">
 			
 			<a href="home.html" title="Logo"><div class="logo_center">
-			Healthy <br/>Tips
+			Healthy <br/>Bob
 			</div></a>
 		</div>
 	</header>
